# spot-feed

./: .gitignore  Cargo.toml  README.md  test-ws.html
.sqlx/: query-046eb8915ce97f7fde8bfae3564ba404873723675633fc320f2cf7031eed00c4.json  query-0fa4a3a1ed28ec36d426665cc152d93a6e126ff175f8db1e9eee37b59f83b01c.json  query-280782df6d6d3f28e0241ae464cc110d81735b52a4dc964cac502b63f8cfb928.json  query-294564e30d465f892c675b49ee73a55a9cdc1bbc205f2d139bd3c27c2c34a718.json  query-3f4fc1459a1f0825ab3f28737e52505913be5c1187877cb6de0f78f823c0977c.json  query-4f053d713988646406233c0a670f8f51c2d69fb906c61695883e69546e28942a.json  query-51fe8584fd455a19f3a3b4c4ebd66229b8f29b4e5a6e235bffd0bd642593a72e.json  query-525276206e678fb6fdfaed56751b5ea8d474d09840ea46a7334c293600aa2552.json  query-64704192955e45c9cc18a521ad50ab728e102ff0d1175422faa9073c45641ca2.json  query-82b1778c35f52df6154c4d71748e560867c53d38f2cc25a9c11ee969559ce10a.json  query-9344af04117075c0e9ea74c1cc5e4e89714a538864b590c65ba7f0fa8505b8c8.json  query-aaee4edd88d5a0a53d8727e5cea6194757536538f1f32b81d9111b864e7215de.json  query-aff263903729aae458851b69b8b6549e11f7c001d7f2d52e68140cbf36b6e7f1.json  query-b46080ec96798a0f646e222c3cfc277dec82765d5e44cdf6bdce477058b89d46.json  query-ceecd0df4b013c49e2aad9e70d10c90a448e11980b99eb9f6780432fbec34ef2.json  query-d678cfe27df2463ed407aca63cc0d6b7d78877c40187f5a7e523b380f9c2d115.json  query-e05e650bdd50f05498c90ef3f9aea721cc636b525a0a5c5aae297e5ab1989b90.json
migrations/: 20251019102429_create_users_table.sql  20251019104402_create_otp_codes_table.sql  (+5 more)
src/: errors.rs  main.rs
(+17 files in other folders)
